# zCounter

./: .gitignore  README.md  pyproject.toml  zcounter-ui.bat
docs/mockups/: README.md  zcounter-mock-01.html  zcounter-mock-01_1.html  zcounter-mock-01_1_1.html  zcounter-mock-01_2.html  zcounter-mock-01_3.html  zcounter-mock-02.html  zcounter-mock-03.html  zcounter-mock-04.html  zcounter-mock-20260612_1.html  zcounter-mock-20260612_2.html  zcounter-mock-20260613_1.html  zcounter-mock-20260613_2.html  zcounter-mock-20260627_1.html  zcounter-mock-20260627_2.html
scripts/: update_cursor_cookie.py
tests/: test_claude_provider.py  test_codex_reset_credits.py  test_cursor_provider.py  test_ui_display.py  test_ui_viewmodel.py
zcounter/: __init__.py  cli.py  models.py
zcounter/providers/: __init__.py  aggregate.py
zcounter/providers/claude/: __init__.py  auth.py  profile_cache.py  provider.py  rate_limit_gate.py  usage_api.py
zcounter/providers/codex/: __init__.py  auth.py  provider.py  registry.py  usage_api.py
zcounter/providers/cursor/: __init__.py  config.py  provider.py  usage_api.py
zcounter/ui/: __init__.py  __main__.py  app.py  display.py  viewmodel.py  webview_api.py
zcounter/ui/assets/: index.html
